--- a/clima_semanal.ipynb
+++ b/clima_semanal.ipynb
@@ -58,7 +58,7 @@
     "        datos['general'].append(linea.text)    \n",
     "\n",
     "    df = pd.DataFrame(datos)  \n",
-    "    DATABASE_LOCATION = \"postgresql://postgres:gestion@localhost/postgres\"\n",
+    "    DATABASE_LOCATION = \"postgresql://postgres:yourpassword@localhost/postgres\"\n",
     "\n",
     "    if df.empty:\n",
     "            print(\"No data downloaded. Finishing execution\")\n",
@@ -77,7 +77,7 @@
     "        print('No Null values found')\n",
     "\n",
     "    engine = sqlalchemy.create_engine(DATABASE_LOCATION)\n",
-    "    conn_string = \"host='localhost' dbname='postgres' user='postgres' password='gestion'\"\n",
+    "    conn_string = \"host='localhost' dbname='postgres' user='postgres' password='yourpassword'\"\n",
     "    conn = psycopg2.connect(conn_string)\n",
     "    print(\"Opened database successfully\")\n",
     "\n",
